[package]
name = "enumland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.80"
axum = { version = "=0.7.4", features = ["http2", "macros"] }
reqwest = { version = "=0.11.24", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
tokio = { version = "=1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "=0.5.1", features = ["trace"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

[dev-dependencies]
assertor = "=0.0.2"
mockito = "=1.3.0"
