[package]
name = "enumland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.85"
axum = { version = "=0.7.5", features = ["http2", "macros"] }
reqwest = { version = "=0.12.4", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "=1.0.202", features = ["derive"] }
serde_json = "=1.0.117"
tokio = { version = "=1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "=0.5.2", features = ["trace"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

[dev-dependencies]
assertor = "=0.0.2"
mockito = "=1.4.0"
